working on blog styling

--- a/src/scss/scss_basement/abstracts/_variables.scss
+++ b/src/scss/scss_basement/abstracts/_variables.scss
@@ -9,7 +9,7 @@
     --color-secondary: #fff;
     --color-secondary-variant: #F6F6F6;
     --color-secondary-variant-2: rgba(246, 246, 246, 0.5);
-    --color-akzent: #BCE4FB;
+    --color-akzent: rgba(188, 228, 251, 1);
     
     --color-on-primary: #000;
     --color-on-secondary: #000;
