--- a/src/scss/scss_basement/pages/blog.scss
+++ b/src/scss/scss_basement/pages/blog.scss
@@ -76,26 +76,79 @@
         }
     }
 
-    // POSTS CARD CONTAINER
+    // POSTS CARDS CONTAINER
     &_post-cards-container{
         // border: 3px solid tomato;
         width: 60%;
-        margin: auto;
+        margin: 0 auto 3rem;
 
         &_card-link{
-            border: 1px dashed black;
+            // border: 1px dashed black;
             margin: 3rem 0;
             display: block;
+            box-shadow: 0 0 20px rgba(0,0,0, 0.1);
+            border-radius: 1rem;
+            overflow: hidden;
+            transition: box-shadow .3s;
+            transition-timing-function: ease-in-out;
+
+            &:hover{
+                box-shadow: 0 0 20px rgba(0,0,0, 0.3);
+            }
+        }
+
+        &_archive-card{
+
+            header{
+                background: rgba(0,0,0, 0.02);
+                // background: rgba(188, 228, 251, 0.1);
+                padding: 1rem;
+                padding-bottom: 0;
+            }
+
+            .page-card{
+                &_title{
+                    font-size: 1.5rem;
+                }
+
+                &_meta{
+                   margin: 0.3rem; 
+
+                   &.hashtags{
+                        background: rgba(0,0,0, 0.02);
+                        // background: rgba(188, 228, 251, 0.1);
+                        padding: 1rem 2rem;
+                        width: calc(100% + 2rem);
+                        margin-left: -1rem;
+                        margin-top: .7rem;
+                        margin-bottom: 0;
+                   }
+                }
+
+                &_preview{
+                    figure{
+                        padding: 0;
+                        margin: 0;
+                    }
+                }
+               
+
+                &_excerpt{
+                    padding: 1rem;
+                }
+            }
         }
 
         img{
-            display: none;
+            // display: none;
+            width: 100%;
         }
 
         &_pagination-container{
-            border: 2px solid pink;
+            // border: 2px solid pink;
             @include flex-variable(row, wrap, space-between, center);
         }
+
     }
 
     // SIDEBAR
@@ -114,9 +167,16 @@
             margin-left: 1rem;
             font-weight: bold;
 
+
             span{
                 border-bottom: 1px solid black;
                 padding-bottom: .3rem;
+
+                &:hover{
+                    padding-right: 4rem;
+                    border-color: #1E8BC3 ;
+                    transition: padding .5s;
+                }
             }
    
         }
@@ -127,6 +187,14 @@
             display: block;
             width: fit-content;
             border-bottom: 1px solid black;
+        }
+
+        a:hover{
+            color: #1E8BC3;
+            padding-right: 4rem;
+            border-color: #1E8BC3 ;
+            transition: padding .5s;
+            font-weight: bold;
         }
 
         figure{
