change home page

--- a/src/scss/scss_basement/abstracts/_variables.scss
+++ b/src/scss/scss_basement/abstracts/_variables.scss
@@ -14,7 +14,9 @@
     --color-on-primary: #000;
     --color-on-secondary: #000;
     --color-on-secondary-light: rgba(0, 0, 0, 0.3);
-    --color-on-akzent: rgba(0, 0, 0, 0.5);
+    // --color-on-akzent: rgba(0, 0, 0, 0.5);
+
+    --color-on-akzent: rgba(0, 0, 0, 0.8);
 
     --color-akzent-2: #2EC4B6;
     --color-akzent-3: #1E8BC3;
