--- a/src/scss/scss_basement/pages/blog.scss
+++ b/src/scss/scss_basement/pages/blog.scss
@@ -57,6 +57,11 @@
         // border: 1px solid black;
         margin: 0 auto 2rem;
 
+        @media screen and (max-width: 875px) {
+            width: 100%;
+            padding: 0 1rem;
+        }
+
         // p{
         //     // display: inline-block;
         //     // background-color: var(--color-primary-light-2);
@@ -66,10 +71,22 @@
            background-color: var(--color-primary-light-2); 
            padding: .3rem 1rem;
            position: relative;
+
+           @media screen and (max-width: 500px) {
+                width: 100%;
+                // margin: auto;
+                margin-bottom: 3rem;
+            }
         }
 
         &_posts{
             width: 100%;
+
+            @media screen and (max-width: 500px) {
+                width: 100%;
+                margin: 2rem auto;
+            }
+        
         }
 
         &_pages{
@@ -94,6 +111,20 @@
             @include flex-row-center;
             background-color: var(--color-akzent);
             cursor: pointer;
+            display: none;
+
+            @media screen and (max-width: 1125px) {
+                display: flex;
+            }
+
+            @media screen and (max-width: 500px) {
+                right: 0;
+                top: 4rem;
+                height: 100%;
+                width: 100%;
+                border-radius: 0; 
+            }
+            
 
             img{
                 width: 1.3rem;
@@ -107,6 +138,14 @@
         // border: 3px solid tomato;
         width: 60%;
         margin: 0 auto 3rem;
+
+        @media screen and (max-width: 1125px) {
+            width: 80%;
+        }
+
+        @media screen and (max-width: 500px) {
+            width: 93%;
+        }
 
         // WHOLE POST CARD
         &_card-link{
@@ -241,6 +280,11 @@
             @media screen and (max-width: 1125px) {
                 font-size: 1.2rem;
                 margin: 3rem auto;
+
+                &:hover{
+                    padding-right: 0rem;
+                    transition: none;
+                }
             }
 
 
@@ -252,6 +296,11 @@
                     padding-right: 4rem;
                     border-color: #1E8BC3 ;
                     transition: padding .5s;
+
+                    @media screen and (max-width: 1125px){
+                        padding-right: 0rem;
+                        transition: none;
+                    }
                 }
             }
    
@@ -271,6 +320,11 @@
             border-color: #1E8BC3 ;
             transition: padding .5s;
             // font-weight: bold;
+
+            @media screen and (max-width: 1125px){
+                padding-right: 0.3rem;
+                transition: none;
+            }
         }
 
         figure{
