--- a/src/scss/scss_basement/pages/blog.scss
+++ b/src/scss/scss_basement/pages/blog.scss
@@ -62,6 +62,10 @@
             padding: 0 1rem;
         }
 
+        @media screen and (max-width: 500px) {
+            margin-bottom: 0;
+        }
+
         // p{
         //     // display: inline-block;
         //     // background-color: var(--color-primary-light-2);
@@ -75,7 +79,9 @@
            @media screen and (max-width: 500px) {
                 width: 100%;
                 // margin: auto;
-                margin-bottom: 3rem;
+                margin-bottom: 0rem;
+                margin-top: 2rem;
+                padding: 1rem;
             }
         }
 
@@ -119,10 +125,12 @@
 
             @media screen and (max-width: 500px) {
                 right: 0;
-                top: 4rem;
+                top: -2.2rem;
                 height: 100%;
                 width: 100%;
-                border-radius: 0; 
+                border-radius: 0;
+                padding: 1.3rem;
+                    
             }
             
 
