--- a/src/scss/scss_basement/pages/blog.scss
+++ b/src/scss/scss_basement/pages/blog.scss
@@ -14,6 +14,10 @@
         width: 100%;
         // border-bottom: 1px solid rgba(0,0,0, 0.2);
         margin-bottom: 2rem;
+
+        @media screen and (max-width: 500px) {
+            margin-bottom: 0;
+        }
     
 
         img{
@@ -124,13 +128,33 @@
             }
 
             @media screen and (max-width: 500px) {
-                right: 0;
-                top: -2.2rem;
-                height: 100%;
-                width: 100%;
-                border-radius: 0;
-                padding: 1.3rem;
-                    
+                // right: 0;
+                // top: -2.2rem;
+                // height: 100%;
+                // width: 100%;
+                // border-radius: 0;
+                // padding: 1.3rem;
+
+                position: fixed;
+                bottom: 1rem;
+                top: initial;
+                right: 2rem;
+                transform: initial;
+                width: 3.5rem;
+                height: 3.5rem;
+                border-radius: 50%;
+                z-index: 100;
+                box-shadow: 0 0 10px rgba(0,0,0, 0.25);
+                // display: none;
+                visibility: hidden;
+                opacity: 0;
+                transition: all .3s;
+
+                &.visible-button{
+                    // display: flex;
+                    visibility: visible;
+                    opacity: 1;
+                }
             }
             
 
