--- a/src/scss/scss_basement/pages/blog.scss
+++ b/src/scss/scss_basement/pages/blog.scss
@@ -22,7 +22,7 @@
 
         img{
             width: 100%;
-            height: 75%;
+            height: 75vh;
             object-fit: cover;
             object-position: top;
         }
