--- a/src/scss/scss_basement/pages/news.scss
+++ b/src/scss/scss_basement/pages/news.scss
@@ -1,2 +1,87 @@
 @import './common.scss';
 
+.news{
+    padding-bottom: 5rem;
+
+    &_header{
+        img{
+            width: 100%;
+            height: 75vh;
+            object-fit: cover;
+            object-position: center;
+        }
+
+        h2{
+            height: 15vh;
+            background-color: var(--color-secondary);
+            box-shadow: 1px 3px 6px rgba(0,0,0,.2);
+            margin: -1rem auto 5rem;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;
+            align-content: center;
+            font-family: "Spectral SC",serif;
+            font-display: block;
+            font-weight: bold;
+            font-size: 2rem;
+        }
+    }
+
+    &_article-container{
+        padding: 1rem;
+    }
+
+    &_article{
+        @include flex-variable(row, wrap, space-evenly, center);
+        // border-left: 3px solid #D0EFB1;
+        width: 60rem;
+        margin: auto;
+        margin-bottom: 12rem;
+        border-radius: 1rem;
+        position: relative;
+
+        &::after{
+            content: '';
+            width: 8rem;
+            height: 8rem;
+            background: url(../graphics/icons_n_co/division-2.svg) center center / contain no-repeat;
+            position: absolute;
+            bottom: -8rem;
+            left: calc(50% - 4rem);
+            display: block;
+        }
+
+        &_header{
+            width: 100%;
+            @include flex-variable(row, wrap, flex-start, center);
+
+            .time{
+                margin-right: 3rem;
+                font-size: 1.2rem;
+                font-weight: bold;
+                background: #D0EFB1;
+                padding: 1rem;
+                padding-right: 5rem;
+                // box-shadow: 0px 4px 6px rgba(0,0,0, 0.25);
+            }
+
+            h2{
+                width: 100%;
+                padding-left: 2rem;
+                font-family: "Allison",cursive;
+                font-weight: 400;
+                font-size: 2.3rem;
+            }
+        }
+
+        &_content{
+            width: 50rem;
+            padding: 2rem;
+
+            img{
+                width: 100%;;
+            }
+        }
+    }
+}
