--- a/src/scss/scss_basement/pages/services.scss
+++ b/src/scss/scss_basement/pages/services.scss
@@ -86,7 +86,7 @@
         }
 
         &_content{
-            background-color: var(--color-secondary-variant);
+            // background-color: var(--color-secondary-variant);
 
             @media screen and (max-width: 1350px){
                 display: none;
@@ -101,22 +101,49 @@
             width: 100%;
             // height: 100vh;
             // object-fit: cover;
-            filter: grayscale(1);
+            // filter: grayscale(1);
             opacity: .8;
         }
 
         &_text{
             padding: 1rem;
             width: 80%;
+            max-width: 850px;
             margin: 0 auto;
+            padding-bottom: 3rem;
 
             @media screen and (max-width: 600px){
                 padding: .2rem;
                 width: 90%;
             }
 
+
+            p:first-of-type{
+                // background-color: var(--color-primary);
+                padding: 1rem 2rem;
+                margin: 3rem auto;
+                border: 1px solid var(--color-primary);
+
+                @media screen and (max-width: 600px){
+                    margin: 1rem auto;
+                }
+
+                &::first-line{
+                    font-weight: bold;
+                }
+            }
+
+
             h2, h3{
                 margin-left: -1rem;
+                background: var(--color-primary);
+                padding: 0.5rem 4rem 0.5rem 1rem;
+                display: inline-block;
+
+                @media screen and (max-width: 1350px){
+                   background: none;
+                   padding: 0;
+                }
 
                 @media screen and (max-width: 600px){
                    margin-left: -.5rem;
