--- a/src/scss/scss_basement/pages/alternate-ways.scss
+++ b/src/scss/scss_basement/pages/alternate-ways.scss
@@ -454,6 +454,7 @@
 
             span{
                 background-color: var(--color-primary);
+                padding: .2rem;
                 padding-right: 1rem;
                 display: inline-block;
 
