--- a/src/scss/scss_basement/pages/services.scss
+++ b/src/scss/scss_basement/pages/services.scss
@@ -122,7 +122,8 @@
                 // background-color: var(--color-primary);
                 padding: 1rem 2rem;
                 margin: 3rem auto;
-                border: 1px solid var(--color-primary);
+                // border: 1px solid var(--color-primary);
+                background: rgba(0,0,0,0.02);
 
                 @media screen and (max-width: 600px){
                     margin: 1rem auto;
@@ -133,10 +134,14 @@
                 }
             }
 
+            h2{
+                background: var(--color-primary);
+            }
+
 
             h2, h3{
                 margin-left: -1rem;
-                background: var(--color-primary);
+                
                 padding: 0.5rem 4rem 0.5rem 1rem;
                 display: inline-block;
 
