--- a/src/scss/scss_basement/abstracts/_mixins.scss
+++ b/src/scss/scss_basement/abstracts/_mixins.scss
@@ -30,6 +30,7 @@
 
 @mixin box-shadow-default($color){
     box-shadow: 1px 3px 6px $color;
+    // box-shadow: 0 0 20px rgba($color: #000000, $alpha: 0.2);
 }
 
 @mixin box-shadow-default-hover($color){
@@ -46,6 +47,7 @@
 
 @mixin box-shadow-alternate{
     box-shadow: 0 3px 5px rgba($color: #000000, $alpha: 0.2);
+    // box-shadow: 0 0 20px rgba($color: #000000, $alpha: 0.2);
 }
 
 @mixin box-shadow-inset($color){
