--- a/src/scss/scss_basement/pages/home.scss
+++ b/src/scss/scss_basement/pages/home.scss
@@ -12,6 +12,7 @@
 
 .startpage{
 
+   
     // 
     // INTRO
     //
@@ -23,12 +24,24 @@
             // @include background-image('../graphics/pics/dr-windblade.jpg');
             background: url(../graphics/pics/girl.jpg) center center / cover no-repeat;
             height: calc(55vh);
-            // position: relative;
+            position: relative;
 
             // &::before,
             // &::after{
             //     position; absolute;
             // }
+
+            &::before{
+                content: '';
+                position: absolute;
+                top: 0;
+                left: 0;
+                display: block;
+                width: 100%;
+                height: 100%;
+                // background: radial-gradient(circle, rgba(255,255,255,0) var(--percent-op-animation-1), rgba(255,255,255,1) var(--percent-op-animation-2) );
+                // animation: show-soft 3s forwards;
+            }
         }
 
         &_heading-container{
@@ -59,7 +72,7 @@
                     background-color: var(--color-secondary);
                     position: absolute;
                     right: 0;
-                    animation: remove-width 1.5s forwards ease-in-out;
+                    animation: remove-width 1.5s  forwards ease-in-out;
                 }
 
                 
@@ -140,6 +153,8 @@
             img{
                 width: 8rem;
                 margin-top: 2rem;
+                // transform: perspective(1000px) rotateY(0deg);
+                // animation: rotate-in-y-circle 3s infinite linear;
             }
 
             h2{
@@ -267,6 +282,7 @@
                 // @include testing-border-2();
                 margin-bottom: 2rem;
                 padding: 0;
+                font-weight: bold;
 
                 // @media screen and (max-width: 1184px) {
                 //   margin-left: 5rem;
@@ -369,6 +385,8 @@
             @media screen and (max-width: 1184px) {
                 @include flex-variable(column, nowrap, flex-start, center);
                 height: auto;
+                border-radius: 1rem;
+                overflow: hidden;
             }
 
             @media screen and (max-width: 1000px) {
@@ -532,7 +550,8 @@
 #card-kassen,
 #card-wahlarzt{
     transform: perspective(1000px) rotateX(25deg);
-    transition: all 2s;
+    transition: all .3s ease-in-out;
+    opacity: 0.2;
 
     @media screen and (orientation: portrait) {
         transform: perspective(1000px) rotateY(0) translateX(0) scale(0.8);
@@ -547,6 +566,7 @@
 
 .perspective-off{
     transform: perspective(1000px) rotateY(0) translateX(0) !important;
+    opacity: 1 !important;
 
     @media screen and (orientation: portrait) {
         opacity: 1 !important;
