--- a/src/scss/scss_basement/pages/physical-therapy.scss
+++ b/src/scss/scss_basement/pages/physical-therapy.scss
@@ -144,7 +144,9 @@
                 padding: 1rem;
                 background-color: var(--color-secondary);
                 border-radius: 0 1rem 1rem 0;
-                box-shadow: 0 0 10px rgba(0,0,0,0.2);
+                // box-shadow: 0 0 10px rgba(0,0,0,0.2);
+                border: solid rgba(0,0,0,0.2);
+                border-width: 1px 1px 1px 0;
 
                 @media screen and (max-width: 650px) {
                     width: 95%;
@@ -204,6 +206,7 @@
                 .heading{
                     align-self: flex-end;
                     border-radius: 1rem 0 0 1rem;
+                    border-width: 1px 0px 1px 1px;
                 }
 
                 img{
@@ -231,14 +234,39 @@
         display: block;
         width: 30rem;
         text-align: right;
-        // @include box-shadow-default(rgba(0,0,0,0.2));
-        box-shadow: 0 0 20px rgba($color: #000000, $alpha: 0.2);
+        // box-shadow: 0 0 20px rgba($color: #000000, $alpha: 0.2);
+        @include box-shadow-default(rgba(0, 0, 0, 0.2));
         position: relative;
         transition: all .3s ease-in-out;
 
+        &::after{
+            content: '';
+            width: 120%;
+            height: 150%;
+            background-color: #fff;
+            position: absolute;
+            top: -25%;
+            left: -10%;
+            z-index: -1;
+            opacity: .5;
+            border-radius: 0 1rem;
+            transform: translateZ(-1px);
+            border: 1px solid rgba(0, 0, 0, 0.3);
+            display: none;
+        }
+
         &:hover{
-            box-shadow: 0 0 10px rgba($color: #000000, $alpha: 0.3);
-         }
+            color: rgba(0, 0, 0, 0.7);
+            // transform: scale(1.1);
+
+            &::after{
+                display: block;
+            }
+        }
+
+        // &:hover{
+        //     box-shadow: 0 0 10px rgba($color: #000000, $alpha: 0.3);
+        //  }
 
         @media screen and (max-width: 1115px) {
             margin-top: 5rem;
@@ -278,6 +306,8 @@
             position: absolute;
             top: calc(50% - 1rem);
             left: 3rem;
+            border-radius: 0 1rem;
+            border: 1px solid rgba(0, 0, 0, 0.3);
         }
     }
 }
