--- a/src/scss/scss_basement/pages/common.scss
+++ b/src/scss/scss_basement/pages/common.scss
@@ -95,6 +95,7 @@ body{
             @include flex-row-center();
             // background-color: tomato;
             position: relative;
+            transition: all .3s;
            
             & > a:hover{
                 font-weight: bold;
