--- a/src/scss/scss_basement/pages/e-medication.scss
+++ b/src/scss/scss_basement/pages/e-medication.scss
@@ -32,7 +32,7 @@
 
         @media screen and (max-width: 1000px) {
             width: 100%;
-            height: 50svh;
+            height: 75svh;
          }
     }
 
@@ -53,7 +53,8 @@
 
             @media screen and (max-width: 1000px) {
                 margin: 1rem;
-             }
+                margin-bottom: 3rem;
+            }
         }
 
         p:not(.text-hint){
