--- a/src/scss/scss_basement/pages/home.scss
+++ b/src/scss/scss_basement/pages/home.scss
@@ -336,6 +336,8 @@
                 transform-style: preserve-3d;
                 // transition: all .1s;
                 display: block;
+                font-weight: bold;
+                transition: all .3s ease-in-out;
 
                 // @media screen and (max-width: 1184px) {
                 //     position: relative;
@@ -355,16 +357,20 @@
                     opacity: .5;
                     border-radius: 0 1rem;
                     transform: translateZ(-1px);
-                    border: 1px solid rgba(0, 0, 0, 0.3);
-                    display: none;
+                    border: 1px solid rgba(0, 0, 0, 0.2);
+                    // display: none;
+                    opacity: 0;
+                    transition: all .3s ease-in-out;
                 }
 
                 &:hover{
-                    color: rgba(0, 0, 0, 0.7);
-                    // transform: scale(1.1);
+                    // color: rgba(0, 0, 0, 0.7);
+                    transform: scale(1.04);
+                    @include box-shadow-default(rgba(0, 0, 0, 0.4));
 
                     &::before{
-                        display: block;
+                        // display: block;
+                        opacity: 1;
                     }
                 }
             }
