--- a/src/scss/scss_basement/pages/news.scss
+++ b/src/scss/scss_basement/pages/news.scss
@@ -9,6 +9,10 @@
             height: 75vh;
             object-fit: cover;
             object-position: center;
+
+            @media screen and (max-width: 1000px) {
+                height: 74svh;
+            }
         }
 
         h2{
@@ -25,6 +29,10 @@
             font-display: block;
             font-weight: bold;
             font-size: 2rem;
+
+            @media screen and (max-width: 1000px) {
+                height: 17svh;
+            }
         }
     }
 
