--- a/src/scss/scss_basement/pages/online-booking.scss
+++ b/src/scss/scss_basement/pages/online-booking.scss
@@ -31,7 +31,7 @@
 
         @media screen and (max-width: 1000px) {
             width: 100%;
-            height: 50svh;
+            height: 71svh;
          }
     }
 
@@ -52,6 +52,8 @@
 
             @media screen and (max-width: 1000px) {
                 margin: 1rem;
+                margin-bottom: 3rem;
+                line-height: 120%;;
              }
         }
     }
