--- a/src/scss/scss_basement/pages/physical-therapy.scss
+++ b/src/scss/scss_basement/pages/physical-therapy.scss
@@ -15,6 +15,10 @@
             object-fit: cover;
             object-position: center;
             // @include gray-image;
+
+            @media screen and (max-width: 1000px) {
+                height: 74svh;
+            }
         }
 
         &_headline{
@@ -26,6 +30,10 @@
             @include font-heading-1;
             // font-weight: bold;
             // font-size: 2rem;
+
+            @media screen and (max-width: 1000px) {
+                height: 17svh;
+            }
         }
     }
 
@@ -237,13 +245,14 @@
         // box-shadow: 0 0 20px rgba($color: #000000, $alpha: 0.2);
         @include box-shadow-default(rgba(0, 0, 0, 0.2));
         position: relative;
+        font-weight: bold;
         transition: all .3s ease-in-out;
 
         &::after{
             content: '';
             width: 120%;
             height: 150%;
-            background-color: #fff;
+            // background-color: #fff;
             position: absolute;
             top: -25%;
             left: -10%;
@@ -252,15 +261,20 @@
             border-radius: 0 1rem;
             transform: translateZ(-1px);
             border: 1px solid rgba(0, 0, 0, 0.3);
-            display: none;
+            // display: none;
+            opacity: 0;
+            transition: all .3s ease-in-out;
         }
 
         &:hover{
-            color: rgba(0, 0, 0, 0.7);
+            // color: rgba(0, 0, 0, 0.7);
             // transform: scale(1.1);
+            transform: scale(1.04);
+            @include box-shadow-default(rgba(0, 0, 0, 0.4));
 
             &::after{
-                display: block;
+                // display: block;
+                opacity: 1;
             }
         }
 
