--- a/src/scss/scss_basement/pages/services.scss
+++ b/src/scss/scss_basement/pages/services.scss
@@ -65,6 +65,11 @@
             display: block;
         }
 
+        figure{
+            padding: 0;
+            margin: 0;
+        }
+
         .outer-heading{
             display: none;
             font-weight: normal;
@@ -87,6 +92,7 @@
 
         &_content{
             // background-color: var(--color-secondary-variant);
+            overflow: hidden;
 
             @media screen and (max-width: 1350px){
                 display: none;
@@ -102,7 +108,8 @@
             // height: 100vh;
             // object-fit: cover;
             // filter: grayscale(1);
-            opacity: .8;
+            // opacity: .8;
+            opacity: 1;
         }
 
         &_text{
