working on animation duration feature

--- a/src/scss/scss_basement/viewport-animations/viewport-animations.scss
+++ b/src/scss/scss_basement/viewport-animations/viewport-animations.scss
@@ -24,9 +24,9 @@
 // VIEWPORT ANIMATION ELEMENTS
 // :::::::::::::::::::::::::::
 
-.anel{
+.animation-element{
 
-    --animation-duration: 2s;
+    --animation-duration: .3s;
 
     // &.opacity-in{
     //     transition: all var(--animation-duration);
