--- a/src/scss/scss_basement/viewport-animations/viewport-animations.scss
+++ b/src/scss/scss_basement/viewport-animations/viewport-animations.scss
@@ -27,6 +27,8 @@
 .animation-element{
 
     --animation-duration: .3s;
+    --animation-delay: 0s;
+    --animation-timing: ease-in-out;
 
     // &.opacity-in{
     //     transition: all var(--animation-duration);
@@ -61,14 +63,14 @@
                 background: radial-gradient(circle, rgba(255,255,255,0) var(--percent-tcg-1), rgba(255,255,255,1) var(--percent-tcg-2) );
                 // background: white;
                 z-index: 2;
-                animation: the-circle-grows var(--animation-duration) forwards ease-in-out;
+                animation: the-circle-grows var(--animation-duration) var(--animation-delay) forwards var(--animation-timing);
             }
         }    
     }
 
     &.opacity-in{
         opacity: 0.2;
-        transition: all var(--animation-duration);
+        transition: all var(--animation-duration) var(--animation-delay) var(--animation-timing);
         
         &.in-right-place{
             opacity: 1;
